# edge-tts-generate

./: .gitignore  AGENTS.md  README.md  __init__.py  bundled_tts.py  config.json  coverage.json  edge_tts_gen.py  external_runtime.py  external_tts_runner.py  logging_config.py  manifest.json  meta.json  pyproject.toml  pytest.ini  requirements-test.txt  vendor_setup.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml  sync-agents-docs.yml  tests.yml
tests/: conftest.py  test_async_synthesis.py  test_bundled_tts.py  test_dataclasses_and_helpers.py  test_edge_tts_gen.py  test_external_runtime.py  test_external_tts_runner.py  test_field_management.py  test_generate_audio_batch.py  test_integration.py  test_issue_fixes.py  test_logging_config.py  test_module_init.py  test_preview_note_selection.py  test_preview_voice_async.py  test_subprocess_flags.py  test_synthesize_single.py  test_user_preference_retention.py  test_vendor_setup.py
